# PLplot

bindings/: CMakeLists.txt
bindings/vala/: CMakeLists.txt  plplot.vala  plplotc.vapi
cmake/modules/: plplot.cmake  summary.cmake  vala.cmake
